[gd_scene load_steps=4 format=3 uid="uid://baa40m8qjckc6"]

[ext_resource type="Script" path="res://mods/example_mod/player/example_player_tab.gd" id="1_e3eom"]
[ext_resource type="Texture2D" uid="uid://c7u1gnaa17l4" path="res://mods/example_mod/assets/progress.png" id="2_64n7m"]
[ext_resource type="Texture2D" uid="uid://bomt51h0ewmw4" path="res://mods/example_mod/assets/under.png" id="3_scrfx"]

[node name="Example" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e3eom")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "This is an example player tab.
Press the button to take a break."
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="BreakButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Break"

[node name="PauseOverlay" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 50
visible = false

[node name="PanelContainer" type="PanelContainer" parent="PauseOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PauseOverlay/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay/PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ProgressClock" type="TextureProgressBar" parent="PauseOverlay/PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0, 0.533333, 0, 1)
layout_mode = 2
rounded = true
fill_mode = 5
texture_under = ExtResource("2_64n7m")
texture_progress = ExtResource("3_scrfx")

[node name="Counter" type="Label" parent="PauseOverlay/PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseOverlay/PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"
